--- a/mockrest-client/src/app/components/layout/sidenav/menu-link.tmpl.html
+++ b/mockrest-client/src/app/components/layout/sidenav/menu-link.tmpl.html
@@ -1,3 +1,3 @@
-<md-button ng-class="{'active' : isSelected()}" ui-sref="{{section.state}}" ng-click="focusSection()">
+<md-button ui-sref="{{section.state}}" ng-click="focusSection()" ui-sref-active="active">
     {{section | humanizeDoc}}<span class="md-visually-hidden" ng-if="isSelected()">current page</span>
 </md-button>
