--- a/mockrest-client/src/app/components/layout/sidenav/menu-toggle.tmpl.html
+++ b/mockrest-client/src/app/components/layout/sidenav/menu-toggle.tmpl.html
@@ -1,6 +1,6 @@
 <md-button class="md-button-toggle"
            ng-click="toggle()"
-           aria-controls="docs-menu-{{section.name}}"
+           aria-controls="sidenav-menu-{{section.name}}"
            aria-expanded="{{isOpen()}}">
     <div flex layout="row">{{section.name}}
         <span flex=""></span>
@@ -13,7 +13,7 @@
   </span>
 </md-button>
 
-<ul ng-show="isOpen()" id="docs-menu-{{section.name}}" class="menu-toggle-list">
+<ul id="sidenav-menu-{{section.name}}" class="menu-toggle-list">
     <li ng-repeat="page in section.pages">
         <menu-link section="page"></menu-link>
     </li>
