Fix login frame position

--- a/mockrest-client/src/app/components/security/signin/signin.scss
+++ b/mockrest-client/src/app/components/security/signin/signin.scss
@@ -15,6 +15,7 @@
   width: 400px;
   border-radius: 2px;
   padding: 20px;
+  margin-right: 65px;
   background: white;
 
   .logo-image, h1, p {
@@ -41,11 +42,3 @@
   letter-spacing: inherit;
 }
 
-#login-desc {
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 1.1;
-  color: #212121;
-  text-transform: inherit;
-  letter-spacing: inherit;
-}
