--- a/mockrest-client/src/app/components/layout/header/header.html
+++ b/mockrest-client/src/app/components/layout/header/header.html
@@ -1,16 +1,18 @@
-<md-toolbar class="md-whiteframe-glow-z2">
-    <div class="md-toolbar-tools">
+<md-toolbar class="md-whiteframe-glow-z1 site-content-toolbar">
+    <div class="md-toolbar-tools header-toolbar-tools">
         <md-button class="md-icon-button" aria-label="Toggle Menu" ng-click="header.openMenu()" hide-gt-sm>
             <md-icon md-svg-src="assets/images/icons/ic_menu_24px.svg" class="s24"></md-icon>
         </md-button>
-        <div class="fill-height" flex>
-            <h2 class="md-toolbar-item md-breadcrumb" flex>Breadcrumb</h2>
+        <div class="fill-height" layout="row" flex>
+            <h2 class="md-toolbar-item md-breadcrumb md-headline" flex>
+                <span class="md-breadcrumb-page">Breadcrumb</span>
+            </h2>
 
             <div class="md-toolbar-item">
                 <span>{{header.username}}</span>
             </div>
             <div class="md-toolbar-item">
-                <a ui-sref="login({logout: 'true'})" class="md-icon-button md-button" aria-label="Disconnect">
+                <a ui-sref="login({logout: 'true'})" class="md-icon-button md-button md-warn" aria-label="Disconnect">
                     <md-icon md-svg-icon="assets/images/icons/ic_exit_to_app_24px.svg"></md-icon>
                 </a>
             </div>
