--- a/mockrest-client/src/app/components/layout/sidenav/sidenav.scss
+++ b/mockrest-client/src/app/components/layout/sidenav/sidenav.scss
@@ -86,7 +86,7 @@
     margin: 0;
     max-height: 40px;
     overflow: hidden;
-    padding: 0px 16px;
+    padding: 0 16px;
     text-align: left;
     text-decoration: none;
     white-space: normal;
