--- a/mockrest-client/src/app/components/layout/header/header.scss
+++ b/mockrest-client/src/app/components/layout/header/header.scss
@@ -4,6 +4,12 @@
   z-index: 3;
 }
 
+.site-content-toolbar.md-whiteframe-glow-z1 {
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.14),
+  0 0 2px 2px rgba(0, 0, 0, 0.098),
+  0 0 5px 1px rgba(0, 0, 0, 0.084);
+}
+
 .header-toolbar-tools {
   padding: 0;
   margin: 0 24px;
