Icons on signin form

--- a/mockrest-client/src/app/components/security/signin/signin.html
+++ b/mockrest-client/src/app/components/security/signin/signin.html
@@ -10,13 +10,13 @@
             <p id="login-desc">Nom d'utilisateur et mot de passe</p>
 
             <form role="form">
-                <md-input-container>
-                    <md-icon md-svg-src="assets/images/icons/ic_person_24px.svg"></md-icon>
+                <md-input-container class="md-icon-float">
+                    <md-icon class="material-icons">perm_identity</md-icon>
                     <input id="username" name="username" ng-model="signin.user.username" placeholder="Login"
                            type="text">
                 </md-input-container>
-                <md-input-container>
-                    <md-icon md-svg-src="assets/images/icons/ic_lock_24px.svg"></md-icon>
+                <md-input-container class="md-icon-float">
+                    <md-icon class="material-icons">lock</md-icon>
                     <input id="password" name="password" ng-model="signin.user.password" placeholder="Password"
                            type="password">
                 </md-input-container>
