--- a/mockrest-client/src/app/components/layout/layout.scss
+++ b/mockrest-client/src/app/components/layout/layout.scss
@@ -28,3 +28,19 @@ a.md-button {
   color: #000;
   padding: 0.2em 0;
 }
+
+.material-icons.md-18 {
+  font-size: 18px;
+}
+
+.material-icons.md-24 {
+  font-size: 24px;
+}
+
+.material-icons.md-36 {
+  font-size: 36px;
+}
+
+.material-icons.md-48 {
+  font-size: 48px;
+}
