--- a/mockrest-client/src/app/components/security/signin/signin.html
+++ b/mockrest-client/src/app/components/security/signin/signin.html
@@ -20,7 +20,8 @@
                     <input id="password" name="password" ng-model="signin.user.password" placeholder="Password"
                            type="password">
                 </md-input-container>
-                <md-button id="signin-btn" class="md-primary md-raised" ng-click="signin.login()" layout-fill>Connexion
+                <md-button id="signin-btn" class="md-primary md-raised" ng-click="signin.login()" layout-fill>
+                    Connexion
                 </md-button>
             </form>
         </div>
