--- a/mockrest-client/src/app/components/layout/header/header.scss
+++ b/mockrest-client/src/app/components/layout/header/header.scss
@@ -14,6 +14,10 @@
   padding: 0;
   margin: 0 24px;
   width: auto;
+
+  .header-separator-icon {
+    transform: translate3d(0, 1px, 0);
+  }
 }
 
 .md-toolbar-tools .md-breadcrumb {
