Adding some tests

--- a/mockrest-client/src/app/errors/404/notfound.html
+++ b/mockrest-client/src/app/errors/404/notfound.html
@@ -4,7 +4,7 @@
     <img src="assets/images/404.jpg" alt="404" class="clearfix"/>
 
     <md-button id="home-btn" class="md-fab md-primary" aria-label="Back homepage" ng-click="notFound.goHomepage()">
-        <md-icon md-svg-src="assets/images/icons/ic_home_24px.svg"></md-icon>
+        <md-icon>home</md-icon>
         <md-tooltip>
             Retour à l'accueil
         </md-tooltip>
