--- a/mockrest-client/src/app/errors/404/notfound.html
+++ b/mockrest-client/src/app/errors/404/notfound.html
@@ -6,7 +6,7 @@
     <md-button id="home-btn" class="md-fab md-primary" aria-label="Back homepage" ng-click="notFound.goHomepage()">
         <md-icon>home</md-icon>
         <md-tooltip>
-            Retour à l'accueil
+            Go to homepage
         </md-tooltip>
     </md-button>
 </div>
